---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2025-05-02
  Changes:
    - Fixed a startup crash.
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2025-05-02
  Changes:
    - Burner assembling machines are removed from the mod, as they are no longer needed to resolve a softlock.
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2025-05-02
  Changes:
    - The Broken quality is no longer hidden. Broken items are now instead generally nonfunctional: Broken entities and tiles are destroyed when placed, broken equipment cannot be inserted into grids, etc.
    - Handcrafting with intermediates is no longer prevented! Multi-step handcrafting experiences extra degradation on the final product.
---------------------------------------------------------------------------------------------------
Version: 0.5.7
Date: 2025-04-27
  Changes:
    - Renamed 'Downgrader port' to 'Downgrade port'.
---------------------------------------------------------------------------------------------------
Version: 0.5.6
Date: 2025-04-25
  Changes:
    - Tweaks to burner assembling machine stats.
    - Better compatibility with modded reactors.
---------------------------------------------------------------------------------------------------
Version: 0.5.5
Date: 2025-04-25
  Changes:
    - Compatibility with mods that introduce loops in recycling recipes.
---------------------------------------------------------------------------------------------------
Version: 0.5.4
Date: 2025-04-25
  Info:
    - Description updated.
---------------------------------------------------------------------------------------------------
Version: 0.5.3